31785.home.banner.756 fix padding-bottom for banner on tablet

--- a/src/components/Banner/style.scss
+++ b/src/components/Banner/style.scss
@@ -35,7 +35,7 @@
 @media (min-width: #{$tablet + 'px'}) {
     .banner {
         padding-top: 70px;
-        padding-bottom: 100px;
+        padding-bottom: 118px;
 
         &__content {
             display: grid;
